--- a/notebooks/step-2-create-config-file.ipynb
+++ b/notebooks/step-2-create-config-file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 92,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:17:31.460557Z",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'base': {'random_stage': 42}, 'data': {'dataset_csv': 'data/raw/iris.csv'}, 'train': None, 'reports': None}\n"
+      "{'base': {'random_state': 42}, 'data': {'dataset_csv': 'data/raw/iris.csv', 'features_path': 'data/processed/featured_iris.csv', 'trainset_path': 'data/processed/train_iris.csv', 'testset_path': 'data/processed/test_iris.csv', 'test_size': 0.2}, 'train': {'clf_params': {'C': 0.001, 'solver': 'lbfgs', 'multi_class': 'multinomial', 'max_iter': 100}, 'model_path': 'models/model.joblib'}, 'reports': {'metrics_file': 'reports/metrics.json', 'confusion_matrix_image': 'reports/confusion_matrix.png'}}\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 95,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:17:31.485189Z",
@@ -166,7 +166,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "[None, None, None]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 97,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:17:32.328046Z",
@@ -229,7 +229,7 @@
        "['sepal_length', 'sepal_width', 'petal_length', 'petal_width']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 99,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:02.150708Z",
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 100,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:02.987144Z",
@@ -394,7 +394,7 @@
        "4                     1.388889                          7.0       0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 102,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:07.438133Z",
@@ -436,19 +436,23 @@
        "((120, 7), (30, 7))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_dataset, test_dataset = train_test_split(dataset, test_size=test_size, random_state=random_state)\n",
+    "train_dataset, test_dataset = train_test_split(\n",
+    "                    dataset, \n",
+    "                    test_size=config['data']['test_size'], \n",
+    "                    random_state=config['base']['random_state']\n",
+    "                    )\n",
     "train_dataset.shape, test_dataset.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 104,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:10.932148Z",
@@ -484,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 106,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:55.427365Z",
@@ -498,7 +502,7 @@
        "LogisticRegression(C=0.001, multi_class='multinomial', random_state=42)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,22 +510,25 @@
    "source": [
     "# Create an instance of Logistic Regression Classifier CV and fit the data\n",
     "\n",
-    "logreg = LogisticRegression(**clf_params, random_state=random_state)\n",
+    "logreg = LogisticRegression(\n",
+    "            **config['train']['clf_params'], \n",
+    "            random_state=config['base']['random_state']\n",
+    "            )\n",
     "logreg.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../models/model.joblib']"
+       "['models/model.joblib']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 108,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:55.875303Z",
@@ -625,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 109,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:56.090756Z",
@@ -642,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 110,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:56.270245Z",
@@ -658,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 111,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:56.493617Z",
@@ -672,7 +679,7 @@
        "0.9305555555555555"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 113,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:56.966279Z",
@@ -729,27 +736,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save confusion matrix image\n",
     "cm_plot.savefig(config['reports']['confusion_matrix_image'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
