--- a/notebooks/step-3-resuable-code.ipynb
+++ b/notebooks/step-3-resuable-code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:17:31.460557Z",
@@ -26,32 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/bigpenguin/projects/dvc'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.chdir('/home/bigpenguin/projects/dvc/')\n",
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.visualization import plot_confusion_matrix"
+    "os.chdir('/home/bigpenguin/projects/dvc')"
    ]
   },
   {
@@ -63,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 95,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:17:31.485189Z",
@@ -187,7 +166,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +202,7 @@
        "[None, None, None]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 97,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:17:32.328046Z",
@@ -250,7 +229,7 @@
        "['sepal_length', 'sepal_width', 'petal_length', 'petal_width']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 99,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:02.150708Z",
@@ -306,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 100,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:02.987144Z",
@@ -415,7 +394,7 @@
        "4                     1.388889                          7.0       0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 102,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:07.438133Z",
@@ -457,7 +436,7 @@
        "((120, 7), (30, 7))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 104,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:10.932148Z",
@@ -509,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 106,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:55.427365Z",
@@ -523,7 +502,7 @@
        "LogisticRegression(C=0.001, multi_class='multinomial', random_state=42)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +528,7 @@
        "['models/model.joblib']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +546,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 108,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-16T21:21:55.875303Z",
+     "start_time": "2019-06-16T21:21:55.864724Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def plot_confusion_matrix(cm,\n",
+    "                          target_names,\n",
+    "                          title='Confusion matrix',\n",
+    "                          cmap=None,\n",
+    "                          normalize=True):\n",
+    "    \"\"\"\n",
+    "    given a sklearn confusion matrix (cm), make a nice plot\n",
+    "\n",
+    "    Arguments\n",
+    "    ---------\n",
+    "    cm:           confusion matrix from sklearn.metrics.confusion_matrix\n",
+    "\n",
+    "    target_names: given classification classes such as [0, 1, 2]\n",
+    "                  the class names, for example: ['high', 'medium', 'low']\n",
+    "\n",
+    "    title:        the text to display at the top of the matrix\n",
+    "\n",
+    "    cmap:         the gradient of the values displayed from matplotlib.pyplot.cm\n",
+    "                  see http://matplotlib.org/examples/color/colormaps_reference.html\n",
+    "                  plt.get_cmap('jet') or plt.cm.Blues\n",
+    "\n",
+    "    normalize:    If False, plot the raw numbers\n",
+    "                  If True, plot the proportions\n",
+    "\n",
+    "    Usage\n",
+    "    -----\n",
+    "    plot_confusion_matrix(cm           = cm,                  # confusion matrix created by\n",
+    "                                                              # sklearn.metrics.confusion_matrix\n",
+    "                          normalize    = True,                # show proportions\n",
+    "                          target_names = y_labels_vals,       # list of names of the classes\n",
+    "                          title        = best_estimator_name) # title of graph\n",
+    "\n",
+    "    Citiation\n",
+    "    ---------\n",
+    "    http://scikit-learn.org/stable/auto_examples/model_selection/plot_confusion_matrix.html\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    accuracy = np.trace(cm) / float(np.sum(cm))\n",
+    "    misclass = 1 - accuracy\n",
+    "\n",
+    "    if cmap is None:\n",
+    "        cmap = plt.get_cmap('Blues')\n",
+    "\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "\n",
+    "    if target_names is not None:\n",
+    "        tick_marks = np.arange(len(target_names))\n",
+    "        plt.xticks(tick_marks, target_names, rotation=45)\n",
+    "        plt.yticks(tick_marks, target_names)\n",
+    "\n",
+    "    if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+    "\n",
+    "    thresh = cm.max() / 1.5 if normalize else cm.max() / 2\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        if normalize:\n",
+    "            plt.text(j, i, \"{:0.4f}\".format(cm[i, j]),\n",
+    "                     horizontalalignment=\"center\",\n",
+    "                     color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "        else:\n",
+    "            plt.text(j, i, \"{:,}\".format(cm[i, j]),\n",
+    "                     horizontalalignment=\"center\",\n",
+    "                     color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.ylabel('True label')\n",
+    "    plt.xlabel('Predicted label\\naccuracy={:0.4f}; misclass={:0.4f}'.format(accuracy, misclass))\n",
+    "    \n",
+    "    return plt.gcf()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:56.090756Z",
@@ -584,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 110,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:56.270245Z",
@@ -600,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 111,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:56.493617Z",
@@ -614,7 +679,7 @@
        "0.9305555555555555"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 113,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-16T21:21:56.966279Z",
@@ -671,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
