--- a/notebooks/step-3-reusable-code.ipynb
+++ b/notebooks/step-3-reusable-code.ipynb
@@ -19,7 +19,43 @@
     "import pandas as pd\n",
     "from sklearn.metrics import confusion_matrix, f1_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import yaml\n",
+    "\n",
+    "# import plot_confusion_matrix()\n",
+    "from src.report.visualize import plot_confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Go to project root folder\n",
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read config\n",
+    "import pprint\n",
+    "\n",
+    "with open('params.yaml') as conf_file:\n",
+    "    config = yaml.safe_load(conf_file)\n",
+    "\n",
+    "pprint.pprint(config)"
    ]
   },
   {
@@ -87,8 +123,7 @@
    "outputs": [],
    "source": [
     "# Save raw data\n",
-    "dataset_csv = '../data/raw/iris.csv'\n",
-    "dataset.to_csv(dataset_csv, index=False)"
+    "dataset.to_csv(config['data']['dataset_csv'], index=False)"
    ]
   },
   {
@@ -141,8 +176,7 @@
    "outputs": [],
    "source": [
     "# Save features\n",
-    "features_path = '../data/processed/featured_iris.csv'\n",
-    "dataset.to_csv(features_path, index=False)"
+    "dataset.to_csv(config['data']['features_path'], index=False)"
    ]
   },
   {
@@ -163,10 +197,10 @@
    },
    "outputs": [],
    "source": [
-    "random_state = 42\n",
-    "test_size = 0.2\n",
-    "\n",
-    "train_dataset, test_dataset = train_test_split(dataset, test_size=test_size, random_state=random_state)\n",
+    "train_dataset, test_dataset = train_test_split(\n",
+    "    dataset, test_size=config['data']['test_size'],\n",
+    "    random_state=config['base']['random_state']\n",
+    ")\n",
     "train_dataset.shape, test_dataset.shape"
    ]
   },
@@ -177,11 +211,8 @@
    "outputs": [],
    "source": [
     "# Save train and test sets\n",
-    "trainset_path = '../data/processed/train_iris.csv'\n",
-    "testset_path = '../data/processed/test_iris.csv'\n",
-    "\n",
-    "train_dataset.to_csv(trainset_path)\n",
-    "test_dataset.to_csv(testset_path)"
+    "train_dataset.to_csv(config['data']['trainset_path'])\n",
+    "test_dataset.to_csv(config['data']['testset_path'])"
    ]
   },
   {
@@ -220,14 +251,11 @@
    "outputs": [],
    "source": [
     "# Create an instance of Logistic Regression Classifier CV and fit the data\n",
-    "clf_params = {\n",
-    "    'C': 0.001,\n",
-    "    'solver': 'lbfgs',\n",
-    "    'multi_class': 'multinomial',\n",
-    "    'max_iter': 100\n",
-    "}\n",
     "\n",
-    "logreg = LogisticRegression(**clf_params, random_state=random_state)\n",
+    "logreg = LogisticRegression(\n",
+    "    **config['train']['clf_params'],\n",
+    "    random_state=config['base']['random_state']\n",
+    ")\n",
     "logreg.fit(X_train, y_train)"
    ]
   },
@@ -237,8 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path= '../models/model.joblib'\n",
-    "joblib.dump(logreg, model_path)"
+    "joblib.dump(logreg, config['train']['model_path'])"
    ]
   },
   {
@@ -246,92 +273,6 @@
    "metadata": {},
    "source": [
     "# Evaluate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-06-16T21:21:55.875303Z",
-     "start_time": "2019-06-16T21:21:55.864724Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def plot_confusion_matrix(cm,\n",
-    "                          target_names,\n",
-    "                          title='Confusion matrix',\n",
-    "                          cmap=None,\n",
-    "                          normalize=True):\n",
-    "    \"\"\"\n",
-    "    given a sklearn confusion matrix (cm), make a nice plot\n",
-    "\n",
-    "    Arguments\n",
-    "    ---------\n",
-    "    cm:           confusion matrix from sklearn.metrics.confusion_matrix\n",
-    "\n",
-    "    target_names: given classification classes such as [0, 1, 2]\n",
-    "                  the class names, for example: ['high', 'medium', 'low']\n",
-    "\n",
-    "    title:        the text to display at the top of the matrix\n",
-    "\n",
-    "    cmap:         the gradient of the values displayed from matplotlib.pyplot.cm\n",
-    "                  see http://matplotlib.org/examples/color/colormaps_reference.html\n",
-    "                  plt.get_cmap('jet') or plt.cm.Blues\n",
-    "\n",
-    "    normalize:    If False, plot the raw numbers\n",
-    "                  If True, plot the proportions\n",
-    "\n",
-    "    Usage\n",
-    "    -----\n",
-    "    plot_confusion_matrix(cm           = cm,                  # confusion matrix created by\n",
-    "                                                              # sklearn.metrics.confusion_matrix\n",
-    "                          normalize    = True,                # show proportions\n",
-    "                          target_names = y_labels_vals,       # list of names of the classes\n",
-    "                          title        = best_estimator_name) # title of graph\n",
-    "\n",
-    "    Citiation\n",
-    "    ---------\n",
-    "    http://scikit-learn.org/stable/auto_examples/model_selection/plot_confusion_matrix.html\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
-    "    accuracy = np.trace(cm) / float(np.sum(cm))\n",
-    "    misclass = 1 - accuracy\n",
-    "\n",
-    "    if cmap is None:\n",
-    "        cmap = plt.get_cmap('Blues')\n",
-    "\n",
-    "    plt.figure(figsize=(8, 6))\n",
-    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
-    "    plt.title(title)\n",
-    "    plt.colorbar()\n",
-    "\n",
-    "    if target_names is not None:\n",
-    "        tick_marks = np.arange(len(target_names))\n",
-    "        plt.xticks(tick_marks, target_names, rotation=45)\n",
-    "        plt.yticks(tick_marks, target_names)\n",
-    "\n",
-    "    if normalize:\n",
-    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
-    "\n",
-    "    thresh = cm.max() / 1.5 if normalize else cm.max() / 2\n",
-    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
-    "        if normalize:\n",
-    "            plt.text(j, i, \"{:0.4f}\".format(cm[i, j]),\n",
-    "                     horizontalalignment=\"center\",\n",
-    "                     color=\"white\" if cm[i, j] > thresh else \"black\")\n",
-    "        else:\n",
-    "            plt.text(j, i, \"{:,}\".format(cm[i, j]),\n",
-    "                     horizontalalignment=\"center\",\n",
-    "                     color=\"white\" if cm[i, j] > thresh else \"black\")\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    plt.ylabel('True label')\n",
-    "    plt.xlabel('Predicted label\\naccuracy={:0.4f}; misclass={:0.4f}'.format(accuracy, misclass))\n",
-    "    \n",
-    "    return plt.gcf()"
    ]
   },
   {
@@ -389,13 +330,11 @@
    "outputs": [],
    "source": [
     "# Save metrics\n",
-    "metrics_file = '../reports/metrics.json'\n",
-    "\n",
     "metrics = {\n",
     "    'f1': f1\n",
     "}\n",
     "\n",
-    "with open(metrics_file, 'w') as mf:\n",
+    "with open(config['reports']['metrics_file'], 'w') as mf:\n",
     "    json.dump(\n",
     "        obj=metrics,\n",
     "        fp=mf,\n",
@@ -424,29 +363,16 @@
    "outputs": [],
    "source": [
     "# Save confusion matrix image\n",
-    "confusion_matrix_image = '../reports/confusion_matrix.png'\n",
-    "cm_plot.savefig(confusion_matrix_image)"
+    "cm_plot.savefig(config['reports']['confusion_matrix_image'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "75b1920f9cbcc979e2f7542df3a177962ac1d8ba339eed6df458570447bf37f9"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.9.4 64-bit ('dvc-venv': venv)",
    "name": "python3"
   },
   "language_info": {
